Validação das rotas de locais e ajustes na lógica para usários
